[package]
name = "wyag"
version = "0.1.0"
authors = ["Jan-Christoph Klie <git@mrklie.com>"]
edition = "2018"

[dependencies]
clap = "~3.0.0-beta.2"
rust-ini = "~0.16"
miniz_oxide = "~0.4.3"
sha-1 = "~0.9.2"
snafu = "0.6.10"

[dev-dependencies]
tempfile = "3.1.0"
fs_extra = "1.2.0"

[lib]
name = "wyag"
path = "src/lib.rs"

[[bin]]
name = "wyag"
